--- a/buildspec.yml
+++ b/buildspec.yml
@@ -32,7 +32,7 @@ phases:
   build:
     commands:
       - echo "Running Ansible playbook to configure EC2 instance..."
-      - ANSIBLE_HOST_KEY_CHECKING=False ansible-playbook -i hosts.ini nginx-setup.yml 
+      - ANSIBLE_HOST_KEY_CHECKING=False ansible-playbook -i inventory.ini nginx-setup.yml
       - echo "Playbook execution completed"
 
   post_build:
