--- a/inventory .ini
+++ b/inventory .ini
@@ -1,2 +1,2 @@
 [webservers]
-ec2-34-222-220-252.us-west-2.compute.amazonaws.com ansible_user=ec2-user ansible_ssh_private_key_file=C:\Users\arpit\OneDrive\Documents\GitHub\AUTOMATING-CLOUD-INFRASTRUCTURE-DEPLOYMENT\ansible.pem
+ec2-34-222-220-252.us-west-2.compute.amazonaws.com ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/id_rsa
