--- a/inventory.ini
+++ b/inventory.ini
@@ -1,3 +1,2 @@
 [webservers]
-ec2-52-12-154-112.us-west-2.compute.amazonaws.com ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/id_rsa
-
+52.12.154.112 ansible_user=ec2-user ansible_ssh_private_key_file=/home/arpit/.ssh/id_rsa
