--- a/nginx-setup.yml
+++ b/nginx-setup.yml
@@ -16,6 +16,6 @@
 
     - name: Copy index.html to Nginx
       copy:
-        src: /mnt/c/Users/arpit/OneDrive/Documents/GitHub/AUTOMATING-CLOUD-INFRASTRUCTURE-DEPLOYMENT/index.html  
+        src: ./index.html 
         dest: /usr/share/nginx/html/index.html
         mode: '0644'
