--- a/inventory.ini
+++ b/inventory.ini
@@ -1,2 +1,2 @@
 [webservers]
-52.12.154.112 ansible_user=ec2-user ansible_ssh_private_key_file=/home/arpit/.ssh/id_rsa
+52.12.154.112 ansible_user=ec2-user
