--- a/nginx-setup.yml
+++ b/nginx-setup.yml
@@ -3,13 +3,22 @@
   hosts: webservers
   become: yes
   tasks:
-    - name: Ensure .ssh directory exists
-      file:
-        path: "/home/ansible/.ssh"
-        state: directory
-        mode: '0700'
-      become: true
-      become_user: ansible  # Adjust as needed
+    # Skip creating .ssh directory since it's already created
+    # - name: Ensure .ssh directory exists
+    #   file:
+    #     path: "/home/ec2-user/.ssh"
+    #     state: directory
+    #     mode: '0700'
+    #   become: true
+    #   become_user: ec2-user
+
+    # Ensure the SSH private key is retrieved from AWS SSM Parameter Store
+    - name: Retrieve SSH Private Key from SSM Parameter Store
+      shell: |
+        aws ssm get-parameter --name "/myproject/ansible-ssh-key" --with-decryption --query "Parameter.Value" --output text > /home/ec2-user/.ssh/id_rsa
+        chmod 600 /home/ec2-user/.ssh/id_rsa
+      become: yes
+      become_user: ec2-user
 
     - name: Install Nginx
       yum:
@@ -24,6 +33,6 @@
 
     - name: Copy index.html to Nginx
       copy:
-        src: /mnt/c/Users/arpit/OneDrive/Documents/GitHub/AUTOMATING-CLOUD-INFRASTRUCTURE-DEPLOYMENT/index.html  
+        src: https://github.com/arpitbeuria196/AUTOMATING-CLOUD-INFRASTRUCTURE-DEPLOYMENT/blob/main/index.html
         dest: /usr/share/nginx/html/index.html
         mode: '0644'
