--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,7 +22,6 @@ phases:
     commands:
       - echo "Preparing SSH key..."
       - mkdir -p ~/.ssh
-      # Retrieve SSH key from AWS Systems Manager Parameter Store
       - echo "$SSH_KEY" > ~/.ssh/id_rsa
       - chmod 600 ~/.ssh/id_rsa
       - echo "SSH key is written to ~/.ssh/id_rsa"
@@ -36,6 +35,8 @@ phases:
       - echo "Running Ansible playbook to configure EC2 instance..."
       - export ANSIBLE_PRIVATE_KEY_FILE=~/.ssh/id_rsa
       - ANSIBLE_HOST_KEY_CHECKING=False ansible-playbook -i inventory.ini nginx-setup.yml
+      - echo "Creating MyGitHubRepoArtifact..."
+      - echo "This is the GitHub Repo Artifact" > MyGitHubRepoArtifact  # This creates the artifact
       - echo "Playbook execution completed"
 
   post_build:
@@ -46,4 +47,4 @@ phases:
 
 artifacts:
   files:
-    - MyGitHubRepoArtifact
+    - MyGitHubRepoArtifact  # Ensures this file is included in the build artifact
