--- a/infrastructure.yaml
+++ b/infrastructure.yaml
@@ -8,7 +8,7 @@ Resources:
       InstanceType: t2.micro
       SecurityGroups:
         - !Ref MySecurityGroup
-      KeyName: !Ref ansible 
+      KeyName: ansible_key 
       ImageId: ami-066a7fbea5161f451  
 
   MySecurityGroup:
