--- a/configure_server.yml
+++ b/configure_server.yml
@@ -1,4 +1,8 @@
 ---
+plugin: amazon.aws.aws_ec2
+regions:
+  - us-west-2
+---
 - name: Configure EC2 instance and deploy Docker application
   hosts: all
   become: yes
