--- a/buildspec.yml
+++ b/buildspec.yml
@@ -24,6 +24,8 @@ phases:
   build:
     commands:
       - echo "Running Ansible playbook..."
+      - ansible-galaxy collection install amazon.aws
+      - ansible-inventory -i aws_ec2.yaml --list
       - ansible-playbook -i aws_ec2.yaml configure_server.yml
       - echo "Playbook execution completed"
 
